<resources>
    <string name="app_name">Numerical Analysis</string>
    <string name="action_settings">Settings</string>

    <string name="jacobian_method">Jacobian method</string>
    <string name="gauss_seidel">Gauss-Seidel method</string>

    <string name="enter_the_coefficients">Coefficients of the equation</string>
    <string name="eqn_1">Eqn 1</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="eqn_2">Eqn 2</string>
    <string name="eqn_3">Eqn 3</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="equals_symbol">=</string>
    <string name="initial_value_of_variables">Initial value of variables</string>
    <string name="degree_of_accuracy">Degree of accuracy</string>
    <string name="number_of_decimal_places">Number of decimal places</string>
    <string name="maximum_iterations_reached">Maximum number of iterations reached. Ensure the equation you supplied is correct</string>
    <string name="about">About</string>

    <string name="ad_app_id">ca-app-pub-7639662093684416~9046334489</string>
    <string name="ad_unit_id">ca-app-pub-7639662093684416/9685462889</string>
</resources>
